# satround

./: .gitignore  README.md  buildozer.spec  pyproject.toml
.github/workflows/: code_quality.yml
satround/: apt.py  main.kv  main.py
